# intelligent-embedded-systems

./: .gitignore  .gitmodules  README.md
UnrealEngine_4.24/: 430667-13636743-patch.txt
autoware/autoware/common/: .gitlab-ci.yml
autoware/autoware/common/object_map/: interface.yaml
autoware/autoware/common/vehicle_sim_model/: package.xml
autoware/autoware/core_perception/: .gitlab-ci.yml
autoware/autoware/core_perception/lidar_fake_perception/: interface.yaml
autoware/autoware/core_perception/lidar_kf_contour_track/: interface.yaml
autoware/autoware/core_perception/lidar_naive_l_shape_detect/: interface.yaml
autoware/autoware/core_perception/naive_motion_predict/: interface.yaml
autoware/autoware/core_perception/ndt_cpu/: CMakeLists.txt
autoware/autoware/core_perception/ndt_gpu/: CMakeLists.txt
autoware/autoware/core_perception/obj_db/: CMakeLists.txt
autoware/autoware/core_perception/road_occupancy_processor/: interface.yaml
autoware/autoware/core_planning/: .gitlab-ci.yml
autoware/autoware/core_planning/decision_maker/: autoware_state_behavior.yaml  autoware_state_drive.yaml  autoware_state_mission.yaml  autoware_state_motion.yaml  autoware_state_vehicle.yaml
autoware/autoware/core_planning/pure_pursuit/: CMakeLists.txt  package.xml
autoware/autoware/simulation/: .gitlab-ci.yml
autoware/autoware/simulation/lgsvl_simulator_bridge/: package.xml
autoware/autoware/simulation/vehicle_gazebo_simulation_launcher/: package.xml
autoware/autoware/utilities/: .gitlab-ci.yml
autoware/autoware/utilities/autoware_launcher/: package.xml
autoware/autoware/utilities/calibration_publisher/: package.xml
autoware/autoware/utilities/log_tools/: package.xml
autoware/autoware/utilities/rosbag_controller/: package.xml
autoware/autoware/utilities/runtime_manager/: package.xml
autoware/autoware/utilities/sync/: sync_drivers.cpp
autoware/autoware/utilities/udon_socket/: CMakeLists.txt  package.xml
autoware/autoware/visualization/: .gitlab-ci.yml
autoware/car_demo/car_demo/plugins/: PriusHybridPlugin.cc  gazebo_ros_block_laser.cpp
autoware/citysim/plugins/: TrafficLightsGUIPlugin.cc
autoware/docker/: Dockerfile
autoware/drivers/awf_drivers/: .gitlab-ci.yml
autoware/drivers/awf_drivers/analog_devices/: circle.yml
autoware/drivers/awf_drivers/javad_navsat_driver/: package.xml
caffe/: .gitignore  Makefile  Makefile.config
caffe/include/caffe/layers/: cudnn_conv_layer.hpp
caffe/include/caffe/util/: bbox_util.hpp  cudnn.hpp  hdf5.hpp
caffe/src/caffe/layers/: cudnn_conv_layer.cpp  cudnn_conv_layer.cu  video_data_layer.cpp  window_data_layer.cpp
caffe/src/caffe/test/: test_io.cpp
caffe/src/caffe/util/: im_transforms.cpp  io.cpp  math_functions.cu
docs/: build.md
lanelet2_map_server/: pom.xml
lanelet2_map_server/src/main/resources/: application.properties
ros/actionlib/actionlib/test/: ref_server_test.launch  simple_execute_ref_server_test.launch  test_cpp_exercise_simple_client.launch  (+6 more)
ros/carla_autoware_agent/agent/: bridge.launch  my_agent.launch
ros/common_tutorials/nodelet_tutorial_math/: plus.launch
ros/dynamic_reconfigure/test/: test_cpp_simple_client.launch  test_python_simple_client.launch
ros/dynamixel_motor/dynamixel_driver/: package.xml
ros/euslisp-release/: CMakeLists.txt  package.xml
ros/geneus/: .travis-raw.sh  .travis-ros.sh  .travis.yml  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
ros/geneus/src/geneus/: generate.py  geneus_main.py
ros/geneus/test/: test-geneus.l  test-geneus.test  test.msg
ros/gennodejs/: package.xml
ros/geometry/tf/: remap_tf.launch
ros/gl_dependency/: CMakeLists.txt  package.xml
ros/gscam/examples/: decklink.launch  gscam_nodelet.launch  minoru.launch  osx.launch  v4l.launch  v4ljpeg.launch  videofile.launch
ros/jsk_recognition/checkerboard_detector/: capture.launch  checkerboard_detector.launch  checkerboard_detector_single.launch
ros/jsk_roseus/roseus/: eustf.cpp  roseus.cpp
ros/jsk_visualization/jsk_rqt_plugins/: package.xml
ros/jskeus-release/: CMakeLists.txt  package.xml
ros/jskeus-release/irteus/: defun.h  irtbvh.c  irtbvh.h  irtcollada.c  irtcollada.h  irtdyna.c  irtdyna.h  irtgeo.c  irtgeo.h  irtgl.c  irtgl.h  irtglrgb.c  irtglrgb.h  irtgraph.c  irtgraph.h  irtimage.c  irtimage.h  irtmath.c  irtmath.h  irtmodel.c  irtmodel.h  irtpointcloud.c  irtpointcloud.h  irtrobot.c  irtrobot.h  irtscene.c  irtscene.h  irtsensor.c  irtsensor.h  irtutil.c  irtutil.h  irtviewer.c  irtviewer.h  irtx.c  irtx.h  png.c  png.h  pqp.c  pqp.h  test.c
ros/laser_assembler/test/: test_laser_assembler.launch
ros/message_runtime/: CMakeLists.txt  package.xml
ros/nmea_navsat_driver/launch/: nmea_serial_driver.launch
ros/opencv_apps/launch/: face_recognition.launch  hls_color_filter.launch  hsv_color_filter.launch  rgb_color_filter.launch  watershed_segmentation.launch
ros/qpoases_vendor/: CMakeLists.txt
ros/qwt_dependency/: CMakeLists.txt  package.xml
ros/robot_state_publisher/test/: test_two_links_fixed_joint.launch
ros/ros_environment/: CMakeLists.txt  package.xml
ros/rosbag_migration_rule/: CMakeLists.txt  package.xml
ros/rqt_console/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/rqt_dep/: CHANGELOG.rst  package.xml
ros/rqt_dep/src/rqt_dep/: dotcode_pack.py  ros_pack_graph.py
ros/rqt_dep/test/: dotcode_pack_test.py
ros/rqt_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/rqt_logger_level/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/rqt_logger_level/src/rqt_logger_level/: logger_level.py  logger_level_service_caller.py  logger_level_widget.py
ros/rqt_moveit/: CHANGELOG.rst  package.xml
ros/rqt_msg/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/rqt_msg/src/rqt_msg/: messages.py  messages_tree_view.py  messages_widget.py
ros/rqt_pose_view/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/rqt_pose_view/src/rqt_pose_view/: pose_view_widget.py
ros/rqt_py_console/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/rqt_shell/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/webkit_dependency/: CMakeLists.txt  package.xml
(+962 files in other folders)
