<package format="3">
  <name>rqt_dep</name>
  <version>0.4.10</version>
  <description>rqt_dep provides a GUI plugin for visualizing the ROS dependency graph.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_dep</url>
  <url type="repository">https://github.com/ros-visualization/rqt_dep</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_dep/issues</url>

  <author>Thibault Kruse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>

  <export>
    <architecture_independent/>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
