<package format="3">
  <name>rqt_logger_level</name>
  <version>0.4.11</version>
  <description>rqt_logger_level provides a GUI plugin for configuring the logger level of ROS nodes.<br />
   <br />
  rqt_logger_level takes over `wx`-based tool [[rxloggerlevel]].
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_logger_level</url>
  <url type="repository">https://github.com/ros-visualization/rqt_logger_level</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_logger_level/issues</url>

  <author>Aaron Blasdel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <architecture_independent/>
      <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
