<package format="3">
  <name>rqt_pose_view</name>
  <version>0.5.10</version>
  <description>rqt_pose_view provides a GUI plugin for visualizing 3D poses.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_pose_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt_pose_view</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_pose_view/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gl_dependency</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opengl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opengl</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
