<package format="3">
  <name>rqt_shell</name>
  <version>0.4.10</version>
  <description>rqt_shell is a Python GUI plugin providing an interactive shell.</description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <maintainer email="kunal_tyagi@yahoo.com">Kunal Tyagi</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_shell</url>
  <url type="repository">https://github.com/ros-visualization/rqt_shell</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_shell/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <architecture_independent/>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
